Fix body text display on mobile landscape

--- a/codex_of_the_damned/static/css/base.css
+++ b/codex_of_the_damned/static/css/base.css
@@ -62,6 +62,9 @@ span.krcg-card:hover {
 span.krcg-clan {
     font-weight: normal;
 }
+p {
+    font-size: 1em;
+}
 a {
     color: #000000;
     cursor: pointer;
